# edge-detection-filter

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  runCMake.sh  runProgram.sh  testProgram.sh
evaluation/: check_data.ipynb  evaluation.Rmd  evaluation.nb.html  time_tests.csv
src/: main.cpp
